src/snapshots/squawk__parse__tests__drop_owned_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: DropOwnedStmt(
                    Object({
                        "behavior": Number(
                            1,
                        ),
                        "roles": Array([
                            Object({
                                "RoleSpec": Object({
                                    "location": Number(
                                        15,
                                    ),
                                    "rolename": String(
                                        "foo",
                                    ),
                                    "roletype": Number(
                                        0,
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    26,
                ),
            },
        ),
    ],
)
