src/snapshots/squawk__parse__tests__drop_subscription_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: DropSubscriptionStmt(
                    Object({
                        "behavior": Number(
                            0,
                        ),
                        "subname": String(
                            "mysub",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    24,
                ),
            },
        ),
    ],
)
