src/snapshots/squawk__parse__tests__drop_user_mapping_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: DropUserMappingStmt(
                    Object({
                        "missing_ok": Bool(
                            true,
                        ),
                        "servername": String(
                            "foo",
                        ),
                        "user": Object({
                            "RoleSpec": Object({
                                "location": Number(
                                    32,
                                ),
                                "rolename": String(
                                    "bob",
                                ),
                                "roletype": Number(
                                    0,
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    46,
                ),
            },
        ),
    ],
)
