src/snapshots/squawk__parse__tests__error_paths.snap
---
source: src/parse.rs
expression: res
---
Err(
    PGParseError(
        ParseError {
            message: Some(
                "syntax error at or near \"lsakdjf\"",
            ),
            funcname: Some(
                "scanner_yyerror",
            ),
            filename: Some(
                "scan.l",
            ),
            lineno: 1121,
            cursorpos: 1,
            context: None,
        },
    ),
)
