src/snapshots/squawk__parse__tests__explain_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: ExplainStmt(
                    Object({
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "analyze",
                                    ),
                                    "location": Number(
                                        9,
                                    ),
                                }),
                            }),
                        ]),
                        "query": Object({
                            "SelectStmt": Object({
                                "fromClause": Array([
                                    Object({
                                        "RangeVar": Object({
                                            "inh": Bool(
                                                true,
                                            ),
                                            "location": Number(
                                                31,
                                            ),
                                            "relname": String(
                                                "t1",
                                            ),
                                            "relpersistence": String(
                                                "p",
                                            ),
                                        }),
                                    }),
                                ]),
                                "op": Number(
                                    0,
                                ),
                                "targetList": Array([
                                    Object({
                                        "ResTarget": Object({
                                            "location": Number(
                                                24,
                                            ),
                                            "val": Object({
                                                "ColumnRef": Object({
                                                    "fields": Array([
                                                        Object({
                                                            "A_Star": Object({}),
                                                        }),
                                                    ]),
                                                    "location": Number(
                                                        24,
                                                    ),
                                                }),
                                            }),
                                        }),
                                    }),
                                ]),
                                "whereClause": Object({
                                    "BoolExpr": Object({
                                        "args": Array([
                                            Object({
                                                "A_Expr": Object({
                                                    "kind": Number(
                                                        0,
                                                    ),
                                                    "lexpr": Object({
                                                        "ColumnRef": Object({
                                                            "fields": Array([
                                                                Object({
                                                                    "String": Object({
                                                                        "str": String(
                                                                            "a",
                                                                        ),
                                                                    }),
                                                                }),
                                                            ]),
                                                            "location": Number(
                                                                41,
                                                            ),
                                                        }),
                                                    }),
                                                    "location": Number(
                                                        43,
                                                    ),
                                                    "name": Array([
                                                        Object({
                                                            "String": Object({
                                                                "str": String(
                                                                    "=",
                                                                ),
                                                            }),
                                                        }),
                                                    ]),
                                                    "rexpr": Object({
                                                        "A_Const": Object({
                                                            "location": Number(
                                                                45,
                                                            ),
                                                            "val": Object({
                                                                "Integer": Object({
                                                                    "ival": Number(
                                                                        1,
                                                                    ),
                                                                }),
                                                            }),
                                                        }),
                                                    }),
                                                }),
                                            }),
                                            Object({
                                                "A_Expr": Object({
                                                    "kind": Number(
                                                        0,
                                                    ),
                                                    "lexpr": Object({
                                                        "ColumnRef": Object({
                                                            "fields": Array([
                                                                Object({
                                                                    "String": Object({
                                                                        "str": String(
                                                                            "b",
                                                                        ),
                                                                    }),
                                                                }),
                                                            ]),
                                                            "location": Number(
                                                                53,
                                                            ),
                                                        }),
                                                    }),
                                                    "location": Number(
                                                        55,
                                                    ),
                                                    "name": Array([
                                                        Object({
                                                            "String": Object({
                                                                "str": String(
                                                                    "=",
                                                                ),
                                                            }),
                                                        }),
                                                    ]),
                                                    "rexpr": Object({
                                                        "A_Const": Object({
                                                            "location": Number(
                                                                57,
                                                            ),
                                                            "val": Object({
                                                                "Integer": Object({
                                                                    "ival": Number(
                                                                        0,
                                                                    ),
                                                                }),
                                                            }),
                                                        }),
                                                    }),
                                                }),
                                            }),
                                        ]),
                                        "boolop": Number(
                                            0,
                                        ),
                                        "location": Number(
                                            48,
                                        ),
                                    }),
                                }),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    59,
                ),
            },
        ),
    ],
)
