src/snapshots/squawk__parse__tests__import_foreign_schema_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: ImportForeignSchemaStmt(
                    Object({
                        "list_type": Number(
                            0,
                        ),
                        "local_schema": String(
                            "films",
                        ),
                        "remote_schema": String(
                            "foreign_films",
                        ),
                        "server_name": String(
                            "film_server",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    75,
                ),
            },
        ),
    ],
)
